--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Easy prototype and static methods inheritance via inheritedBy method",
   "main": "./lib/objex.js",
   "scripts": {
-    "test": "./node_modules/.bin/jshint --config ./.jshintrc ./lib ./node_modules/.bin/jscs ./lib ./test && ./node_modules/.bin/nodeunit ./test"
+    "test": "jshint --config ./.jshintrc ./lib && jscs ./lib ./test && mocha -R spec -u exports ./test"
   },
   "repository": {
     "type": "git",
@@ -30,9 +30,10 @@
     }
   ],
   "devDependencies": {
-    "nodeunit": "0.8.x",
     "jshint": "2.1.x",
-    "jscs": ">=1.0.5"
+    "jscs": ">=1.0.5",
+    "mocha": "^1.20.1",
+    "chai": "^1.9.1"
   },
   "dependencies": {
     "extend": "1.3.0"
