--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   ],
   "devDependencies": {
     "jshint": "2.1.x",
-    "jscs": ">=1.0.5",
+    "jscs": "1.4.x",
     "mocha": "^1.20.1",
     "chai": "^1.9.1"
   },
